Adding README and new analysis

--- a/data/data_analytics.ipynb
+++ b/data/data_analytics.ipynb
@@ -1,8 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File name to be used in this analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILE_NAME = 'results_fcfs-400-0,6.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +35,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.read_csv('../src/results_fcfs-400-0,6.csv', delimiter=',', header=None, names=['batch', 'E_W', 'E_Nq', 'E_Ns'], skiprows=1)"
+    "### Initializing our DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(FILE_NAME, delimiter=',', header=None, names=['batch', 'E_W', 'E_Nq', 'E_Ns'], skiprows=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -67,37 +97,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1.297820</td>\n",
-       "      <td>0.7775</td>\n",
-       "      <td>0.5625</td>\n",
+       "      <td>1.315852</td>\n",
+       "      <td>0.8850</td>\n",
+       "      <td>0.5800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1.408964</td>\n",
-       "      <td>0.7925</td>\n",
-       "      <td>0.6000</td>\n",
+       "      <td>1.283670</td>\n",
+       "      <td>0.8875</td>\n",
+       "      <td>0.6500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>1.096503</td>\n",
-       "      <td>0.7000</td>\n",
-       "      <td>0.6325</td>\n",
+       "      <td>1.180521</td>\n",
+       "      <td>0.6600</td>\n",
+       "      <td>0.5800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>1.754517</td>\n",
-       "      <td>1.0700</td>\n",
-       "      <td>0.6025</td>\n",
+       "      <td>1.326003</td>\n",
+       "      <td>0.7425</td>\n",
+       "      <td>0.6100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>1.684256</td>\n",
-       "      <td>0.9850</td>\n",
-       "      <td>0.6675</td>\n",
+       "      <td>0.922376</td>\n",
+       "      <td>0.4900</td>\n",
+       "      <td>0.5275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -107,63 +137,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3195</th>\n",
-       "      <td>3196</td>\n",
-       "      <td>1.209993</td>\n",
+       "      <th>95</th>\n",
+       "      <td>96</td>\n",
+       "      <td>1.553792</td>\n",
+       "      <td>0.8675</td>\n",
+       "      <td>0.5950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>97</td>\n",
+       "      <td>1.039021</td>\n",
+       "      <td>0.5475</td>\n",
+       "      <td>0.5800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>98</td>\n",
+       "      <td>1.332979</td>\n",
+       "      <td>0.8400</td>\n",
+       "      <td>0.5650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>99</td>\n",
+       "      <td>1.275853</td>\n",
+       "      <td>0.6625</td>\n",
        "      <td>0.6000</td>\n",
-       "      <td>0.5150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3196</th>\n",
-       "      <td>3197</td>\n",
-       "      <td>1.235442</td>\n",
-       "      <td>0.6975</td>\n",
-       "      <td>0.5900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3197</th>\n",
-       "      <td>3198</td>\n",
-       "      <td>1.166647</td>\n",
-       "      <td>0.7775</td>\n",
-       "      <td>0.5350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3198</th>\n",
-       "      <td>3199</td>\n",
-       "      <td>1.129580</td>\n",
-       "      <td>0.6200</td>\n",
-       "      <td>0.5400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3199</th>\n",
-       "      <td>3200</td>\n",
-       "      <td>1.008603</td>\n",
-       "      <td>0.5725</td>\n",
-       "      <td>0.5225</td>\n",
+       "      <th>99</th>\n",
+       "      <td>100</td>\n",
+       "      <td>1.540478</td>\n",
+       "      <td>0.9525</td>\n",
+       "      <td>0.6250</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3200 rows × 4 columns</p>\n",
+       "<p>100 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      batch       E_W    E_Nq    E_Ns\n",
-       "0         1  1.297820  0.7775  0.5625\n",
-       "1         2  1.408964  0.7925  0.6000\n",
-       "2         3  1.096503  0.7000  0.6325\n",
-       "3         4  1.754517  1.0700  0.6025\n",
-       "4         5  1.684256  0.9850  0.6675\n",
-       "...     ...       ...     ...     ...\n",
-       "3195   3196  1.209993  0.6000  0.5150\n",
-       "3196   3197  1.235442  0.6975  0.5900\n",
-       "3197   3198  1.166647  0.7775  0.5350\n",
-       "3198   3199  1.129580  0.6200  0.5400\n",
-       "3199   3200  1.008603  0.5725  0.5225\n",
+       "    batch       E_W    E_Nq    E_Ns\n",
+       "0       1  1.315852  0.8850  0.5800\n",
+       "1       2  1.283670  0.8875  0.6500\n",
+       "2       3  1.180521  0.6600  0.5800\n",
+       "3       4  1.326003  0.7425  0.6100\n",
+       "4       5  0.922376  0.4900  0.5275\n",
+       "..    ...       ...     ...     ...\n",
+       "95     96  1.553792  0.8675  0.5950\n",
+       "96     97  1.039021  0.5475  0.5800\n",
+       "97     98  1.332979  0.8400  0.5650\n",
+       "98     99  1.275853  0.6625  0.6000\n",
+       "99    100  1.540478  0.9525  0.6250\n",
        "\n",
-       "[3200 rows x 4 columns]"
+       "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,17 +203,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mean for E[W] and E[Nq]:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.4950514041524676, 0.8989125000000001]"
+       "[1.5056146525417702, 0.9063500000000001]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,14 +233,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variance for E[W] and E[Nq]:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.21989403, 0.12184603])"
+       "array([0.24093599, 0.13931066])"
       ]
      },
      "metadata": {},
@@ -220,8 +264,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### T-Student for mean(W) and mean(Nq):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC da média de W: (1.4788038572018631, 1.511298951103072)\n",
-      "IC da média de Nq: (0.8868180316428131, 0.9110069683571871)\n"
+      "IC da média de W: (1.4094076006322922, 1.6018217044512482)\n",
+      "IC da média de Nq: (0.8331942874435881, 0.9795057125564121)\n"
      ]
     }
    ],
@@ -251,15 +302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W mean precision: 0.010867550711284799\n",
-      "Nq mean precision: 0.01345455576286565\n"
+      "W mean precision: 0.0638988546950322\n",
+      "Nq mean precision: 0.08071463844697076\n"
      ]
     }
    ],
@@ -271,8 +322,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chi-Square for Var(W) and Var(Nq):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,15 +342,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC da variância de W: (36.97844709199788, 260.5337033448428)\n",
-      "IC da variância de Nq: (20.490220548809255, 144.36498722222163)\n"
+      "IC da variância de W: (0.007103869497352508, 0.00783570270728968)\n",
+      "IC da variância de Nq: (0.004107500744557288, 0.004530651177687989)\n"
      ]
     }
    ],
@@ -303,15 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W var precision: 0.7514155503383512\n",
-      "Nq var precision: 0.7514155503383511\n"
+      "W var precision: 0.048986222624886736\n",
+      "Nq var precision: 0.04898622262488672\n"
      ]
     }
    ],
@@ -321,11 +379,70 @@
     "\n",
     "print(f\"W var precision: {var_accuracy_w}\\nNq var precision: {var_accuracy_nq}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### T-Student for Var(W) and Var(Nq):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_width_ic_2 = [mean_width_ic[0]/avgs[0], mean_width_ic[1]/avgs[1]]\n",
+    "\n",
+    "var_IC_w_2 = (var[0] - 1.96*mean_width_ic_2[0], var[0] + 1.96*mean_width_ic_2[0])\n",
+    "var_IC_nq_2 = (var[1] - 1.96*mean_width_ic_2[1], var[1] + 1.96*mean_width_ic_2[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IC da variância de W: (0.17703713127729626, 0.30483484066736055)\n",
+      "IC da variância de Nq: (0.05859602064393843, 0.22002529753787986)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"IC da variância de W: {var_IC_w_2}\")\n",
+    "print(f\"IC da variância de Nq: {var_IC_nq_2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W var precision: 0.26521092080603914\n",
+      "Nq var precision: 0.5793859491706176\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_accuracy_w_2 = (var_IC_w_2[1] - var_IC_w_2[0])/(var_IC_w_2[1] + var_IC_w_2[0])\n",
+    "var_accuracy_nq_2 = (var_IC_nq_2[1] - var_IC_nq_2[0])/(var_IC_nq_2[1] + var_IC_nq_2[0])\n",
+    "\n",
+    "print(f\"W var precision: {var_accuracy_w_2}\\nNq var precision: {var_accuracy_nq_2}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.8.2 32-bit",
    "language": "python",
    "name": "python3"
   },
@@ -339,12 +456,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9eba946ae18c2fd52bd7ee0675653c9ba3cc2017ffd7c41149393a04d904615d"
+    "hash": "6d074f277f70aa5a2a7ed6e7ffdb9ccaaf56333bcaecc33c5069b9d0e515dfab"
    }
   }
  },
