:hammer: Cleaning code

--- a/data/data_analytics.ipynb
+++ b/data/data_analytics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### File name to be used in this analysis"
+    "### File name to be used in this analysis:"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### T-Student for Var(W) and Var(Nq):"
+    "### T-Student for Var(W) and Var(Nq): (TODO)"
    ]
   },
   {
